# UserInfoManagementSystem

./: CMakeLists.txt  datetime.cpp  datetime.h  main.cpp  menu.cpp  menu.h  output.txt  person.cpp  person.h  time.cpp  time.h  user.cpp  user.h  usermenu.cpp  usermenu.h
